# team-league-generator

./: LICENSE  pyproject.toml
src/team_league_generator/: constants.py  errors.py  generics.py  geography.py  players.py  splortsleague.py  teams.py  utils.py
src/team_league_generator/data/: first_names.txt  last_names.txt  leagues_divisions.txt  team_names.txt
src/team_league_generator/data/geography/: _ABBR_KEY  afg.txt  afg_states.txt  alg.txt  alg_states.txt  ang.txt  ang_states.txt  arg.txt  arg_states.txt  aus.txt  aus_states.txt  ban.txt  ban_states.txt  bel.txt  bel_states.txt  bfa.txt  bfa_states.txt  bra.txt  bra_states.txt  cam.txt  cam_states.txt  can.txt  can_states.txt  cha.txt  cha_states.txt  chi.txt  chi_states.txt  chn.txt  chn_states.txt  civ.txt  civ_states.txt  cmr.txt  cmr_states.txt  cod.txt  cod_states.txt  col.txt  col_states.txt  cub.txt  cub_states.txt  cze.txt  (+177 more)
tests/: test_core.py  test_generics.py  test_geography.py  test_players.py  test_splortsleague.py  test_teams.py  test_utils.py
